{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 112,
  "lineage": "6831a718-0e5a-97ab-930a-2f9b06fad62d",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:829703038395:security-group/sg-02d29a604c9b0d098",
            "description": "Security group for all nodes in the cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02d29a604c9b0d098",
            "ingress": [],
            "name": "final-project-cluster-node-sg",
            "name_prefix": "",
            "owner_id": "829703038395",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "final-project-cluster-node-sg"
            },
            "tags_all": {
              "Name": "final-project-cluster-node-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02ba4574c535e9f2e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins",
      "mode": "data",
      "type": "kubernetes_service",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "jenkins/jenkins",
            "metadata": [
              {
                "annotations": {
                  "meta.helm.sh/release-name": "jenkins",
                  "meta.helm.sh/release-namespace": "jenkins"
                },
                "generation": 0,
                "labels": {
                  "app.kubernetes.io/component": "jenkins-controller",
                  "app.kubernetes.io/instance": "jenkins",
                  "app.kubernetes.io/managed-by": "Helm",
                  "app.kubernetes.io/name": "jenkins",
                  "helm.sh/chart": "jenkins-5.0.16"
                },
                "name": "jenkins",
                "namespace": "jenkins",
                "resource_version": "19426",
                "uid": "09f48cfa-69f5-435b-8766-653ee726c4d6"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "172.20.136.208",
                "cluster_ips": [
                  "172.20.136.208"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "load_balancer_source_ranges": [
                  "0.0.0.0/0"
                ],
                "port": [
                  {
                    "name": "http",
                    "node_port": 30271,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "8080"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app.kubernetes.io/component": "jenkins-controller",
                  "app.kubernetes.io/instance": "jenkins"
                },
                "session_affinity": "None",
                "type": "LoadBalancer"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "a09f48cfa69f5435b8766653ee726c4d-618735587.eu-west-1.elb.amazonaws.com"
                      }
                    ]
                  }
                ]
              }
            ]
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.monitoring",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "monitoring",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "monitoring",
            "metadata": [
              {
                "generation": 0,
                "name": "monitoring",
                "resource_version": "29850",
                "uid": "26d3f153-b4b0-439e-9bba-f4028ada4844"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_eks_cluster_auth.cluster",
            "module.eks.aws_eks_addon.ebs_csi_driver",
            "module.eks.aws_eks_cluster.eks",
            "module.eks.aws_eks_node_group.general",
            "module.eks.aws_iam_openid_connect_provider.oidc",
            "module.eks.aws_iam_role.ebs_csi_irsa_role",
            "module.eks.aws_iam_role.eks",
            "module.eks.aws_iam_role.nodes",
            "module.eks.aws_iam_role_policy_attachment.amazon_ec2_container_registry_power_user",
            "module.eks.aws_iam_role_policy_attachment.amazon_ec2_container_registry_read_only",
            "module.eks.aws_iam_role_policy_attachment.amazon_eks_cni_policy",
            "module.eks.aws_iam_role_policy_attachment.amazon_eks_worker_node_policy",
            "module.eks.aws_iam_role_policy_attachment.ebs_irsa_policy",
            "module.eks.aws_iam_role_policy_attachment.eks",
            "module.eks.aws_security_group.node_sg",
            "module.eks.data.aws_eks_cluster.cluster",
            "module.eks.data.aws_eks_cluster_auth.cluster",
            "module.eks.kubernetes_storage_class.ebs_sc",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:829703038395:security-group/sg-0f7f02ddb863c7af7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f7f02ddb863c7af7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02d29a604c9b0d098"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "final-project-db-sg",
            "name_prefix": "",
            "owner_id": "829703038395",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "final-project",
              "ManagedBy": "Terraform",
              "Owner": "dm-zhuk",
              "Project": "final-project"
            },
            "tags_all": {
              "Environment": "final-project",
              "ManagedBy": "Terraform",
              "Owner": "dm-zhuk",
              "Project": "final-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-02ba4574c535e9f2e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.node_sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0db72fec51fb28216",
            "arn": "arn:aws:ec2:eu-west-1:829703038395:elastic-ip/eipalloc-0db72fec51fb28216",
            "association_id": "eipassoc-00c17f8bd3ada1fa4",
            "domain": "vpc",
            "id": "eipalloc-0db72fec51fb28216",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-086446e0db73fc746",
            "private_dns": "ip-10-0-1-46.eu-west-1.compute.internal",
            "private_ip": "10.0.1.46",
            "public_dns": "ec2-52-208-28-50.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.208.28.50",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "final-project-nat-eip"
            },
            "tags_all": {
              "Name": "final-project-nat-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:829703038395:internet-gateway/igw-0497a374d6f707c82",
            "id": "igw-0497a374d6f707c82",
            "owner_id": "829703038395",
            "tags": {
              "Name": "final-project-igw"
            },
            "tags_all": {
              "Name": "final-project-igw"
            },
            "vpc_id": "vpc-02ba4574c535e9f2e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0db72fec51fb28216",
            "association_id": "eipassoc-00c17f8bd3ada1fa4",
            "connectivity_type": "public",
            "id": "nat-0c6ffbd244d34c4be",
            "network_interface_id": "eni-086446e0db73fc746",
            "private_ip": "10.0.1.46",
            "public_ip": "52.208.28.50",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0cf501ad92fbc4742",
            "tags": {
              "Name": "final-project-nat"
            },
            "tags_all": {
              "Name": "final-project-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01a6e5d5f9257801d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c6ffbd244d34c4be",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01a6e5d5f9257801d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0497a374d6f707c82",
            "id": "r-rtb-0ef9c673de6182cd51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ef9c673de6182cd5",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:829703038395:route-table/rtb-01a6e5d5f9257801d",
            "id": "rtb-01a6e5d5f9257801d",
            "owner_id": "829703038395",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c6ffbd244d34c4be",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "final-project-private-rt"
            },
            "tags_all": {
              "Name": "final-project-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-02ba4574c535e9f2e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:829703038395:route-table/rtb-0ef9c673de6182cd5",
            "id": "rtb-0ef9c673de6182cd5",
            "owner_id": "829703038395",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0497a374d6f707c82",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "final-project-public-rt"
            },
            "tags_all": {
              "Name": "final-project-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-02ba4574c535e9f2e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-089ea33b1caf99222",
            "route_table_id": "rtb-01a6e5d5f9257801d",
            "subnet_id": "subnet-0c220e6c4b5913efd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-053a604a2fc071cae",
            "route_table_id": "rtb-01a6e5d5f9257801d",
            "subnet_id": "subnet-07b8a2cac8a37490f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f37cad49bc2d9c5a",
            "route_table_id": "rtb-01a6e5d5f9257801d",
            "subnet_id": "subnet-0d39bd4ef19042f29"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0085085cc1b62148e",
            "route_table_id": "rtb-0ef9c673de6182cd5",
            "subnet_id": "subnet-0cf501ad92fbc4742"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-052dc0845ce1c3b4e",
            "route_table_id": "rtb-0ef9c673de6182cd5",
            "subnet_id": "subnet-06a3726c5801b256c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fc73eee7a5281a7a",
            "route_table_id": "rtb-0ef9c673de6182cd5",
            "subnet_id": "subnet-00800a39ae0b42e35"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:829703038395:subnet/subnet-0c220e6c4b5913efd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c220e6c4b5913efd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "829703038395",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "final-project-private-subnet-1"
            },
            "tags_all": {
              "Name": "final-project-private-subnet-1"
            },
            "vpc_id": "vpc-02ba4574c535e9f2e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:829703038395:subnet/subnet-07b8a2cac8a37490f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07b8a2cac8a37490f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "829703038395",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "final-project-private-subnet-2"
            },
            "tags_all": {
              "Name": "final-project-private-subnet-2"
            },
            "vpc_id": "vpc-02ba4574c535e9f2e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:829703038395:subnet/subnet-0d39bd4ef19042f29",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d39bd4ef19042f29",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "829703038395",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "final-project-private-subnet-3"
            },
            "tags_all": {
              "Name": "final-project-private-subnet-3"
            },
            "vpc_id": "vpc-02ba4574c535e9f2e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:829703038395:subnet/subnet-0cf501ad92fbc4742",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cf501ad92fbc4742",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "829703038395",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "final-project-public-subnet-1"
            },
            "tags_all": {
              "Name": "final-project-public-subnet-1"
            },
            "vpc_id": "vpc-02ba4574c535e9f2e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:829703038395:subnet/subnet-06a3726c5801b256c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06a3726c5801b256c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "829703038395",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "final-project-public-subnet-2"
            },
            "tags_all": {
              "Name": "final-project-public-subnet-2"
            },
            "vpc_id": "vpc-02ba4574c535e9f2e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:829703038395:subnet/subnet-00800a39ae0b42e35",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00800a39ae0b42e35",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "829703038395",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "final-project-public-subnet-3"
            },
            "tags_all": {
              "Name": "final-project-public-subnet-3"
            },
            "vpc_id": "vpc-02ba4574c535e9f2e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:829703038395:vpc/vpc-02ba4574c535e9f2e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d80d7633aa924bad",
            "default_route_table_id": "rtb-06cddee418972477c",
            "default_security_group_id": "sg-0d6c00f68e94d447f",
            "dhcp_options_id": "dopt-093b1eb1767d58e65",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02ba4574c535e9f2e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06cddee418972477c",
            "owner_id": "829703038395",
            "tags": {
              "Name": "final-project"
            },
            "tags_all": {
              "Name": "final-project"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}